kubernetes/services/salamandre/base/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name wallabag
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
  annotations: # TODO: make redirect default ?
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: &host bag.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wallabag
                port:
                  name: http
  tls:
    - hosts:
        - *host
